--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@
 }
 
 p {
-	margin: 0
+	margin: 0;
 }
 
 a:hover {
@@ -46,6 +46,15 @@ a:visited {
 
 ul {
 	list-style: none;
+}
+
+button{
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
+	outline: none;
+	padding: 0;
+	appearance: none;
 }
 
 header {
@@ -901,10 +910,10 @@ footer p {
 		padding: 5px;
 	}
 	.message-btn {
-		padding: 5px;
+		padding: 8px;
 		background-color: #C2AA99;
 		color: #FFFFFF;
-		border-radius: 10px;
+		border-radius: 8px;
 	}
 }
 
