[fix]美容師・ヘアモ一覧のリファクタリング

--- a/app/views/hairdressers/show.html.erb
+++ b/app/views/hairdressers/show.html.erb
@@ -109,7 +109,7 @@
 			</div>
 		</div>
 	</div>
-	<% if @hairdresser = current_hairdresser %>
+	<% if @hairdresser == current_hairdresser %>
 		<div class="row">
 			<div class="col-md-12">
 				<div class="tab-box">
