--- a/app/views/models/show.html.erb
+++ b/app/views/models/show.html.erb
@@ -72,7 +72,7 @@
 			</div>
 		</div>
 	</div>
-	<% if @model = current_model %>
+	<% if @model == current_model %>
 		<div class="row">
 			<div class="col-md-12">
 				<div class="tab-box">
