[fix]美容師一覧検索クリアボタン修正

--- a/app/views/hairdressers/index.html.erb
+++ b/app/views/hairdressers/index.html.erb
@@ -35,7 +35,7 @@
             <% end %>
           </div>
           <div class="search-btn">
-            <%= f.submit "clear", type: :reset, class: "btn" %>
+            <%= f.submit "clear", type: :button, class: "reset-btn", id: "reset-btn" %>
             <%= f.submit "検索", class: "btn" %>
           </div>
         <% end %>
