--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -24,24 +24,24 @@
 			</div>
 			<div class="about">
 				<h4>ユーザー登録することで、マイページ内でフォロー・フォロワーやヘアカタなどを一覧表示出来ます</h4>
-				<div class="box"></div>
+				<div class="box box1"></div>
 			</div>
 			<div class="about">
 				<h4>美容師・ヘアモデル一覧から条件を絞って検索が出来ます</h4>
-				<div class="box"></div>
-				<div class="box"></div>
+				<div class="box box2"></div>
+				<div class="box box3"></div>
 			</div>
 			<div class="about">
 				<h4>美容師はヘアカタログを登録することが出来ます</h4>
-				<div class="box"></div>
+				<div class="box box4"></div>
 			</div>
 			<div class="about">
 				<h4>ヘアモデルはヘアカタログに「いいね」することが出来ます</h4>
-				<div class="box"></div>
+				<div class="box box5"></div>
 			</div>
 			<div class="about">
 				<h4>美容師やヘアモデルと直接連絡を取りたいときはDMを送ることが出来ます</h4>
-				<div class="box"></div>
+				<div class="box box6"></div>
 			</div>
 			<div class="about">
 				<div class="start">
