--- a/app/views/hairdressers/index.html.erb
+++ b/app/views/hairdressers/index.html.erb
@@ -6,7 +6,7 @@
           <p>美容師検索</p>
           <div class="select">
             <%= f.label :性別, class: "content" %>
-            <%= f.select :hairdresser_gender, options_for_select(Hairdresser.hairdresser_genders.keys.map {|k| [I18n.t("enums.hairdresser.hairdresser_gender.#{k}"), k]}, params[:area]), { include_blank: '選択なし'}, class: "choice" %>
+            <%= f.select :hairdresser_gender, options_for_select(Hairdresser.hairdresser_genders.keys.map {|k| [I18n.t("enums.hairdresser.hairdresser_gender.#{k}"), k]}, params[:hairdresser_gender]), { include_blank: '選択なし'}, class: "choice" %>
             <%= f.label :サロンエリア, class: "content" %>
             <%= f.select :area, options_for_select(Hairdresser.areas.keys.map {|k| [I18n.t("enums.hairdresser.area.#{k}"), k]}, params[:area]), { include_blank: '選択なし'}, class: "choice" %>
           </div>
@@ -43,81 +43,6 @@
     </div>
   </div>
   <div class="row">
-    <% @hairdressers.each do |hairdresser| %>
-      <%= link_to hairdresser_path(hairdresser.id) do %>
-    <div class="index col-md-6">
-      <div class="index-box">
-        <span><%= attachment_image_tag(hairdresser, :hairdresser_image, fallback: 'no images.png', size: '150x150', class: "image-box") %></span>
-        <div class="profile-box">
-        <table class="profile-list">
-          <tr>
-            <td class="profile-item">名前</td>
-            <td><%= hairdresser.hairdresser_name %></td>
-          </tr>
-          <tr>
-            <td class="profile-item">性別</td>
-            <td><%= hairdresser.hairdresser_gender_i18n %></td>
-          </tr>
-          <tr>
-            <td class="profile-item">美容室</td>
-            <td><%= hairdresser.salon_name %></td>
-          </tr>
-          <tr>
-            <td class="profile-item">エリア</td>
-            <td><%= hairdresser.area_i18n %></td>
-          </tr>
-        </table>
-        <div class="collect">
-          <p><strong>＜募集モデル＞</strong></p>
-          <ul class="clearfix">
-          <% if hairdresser.cuts.count == 0 %>
-          <p class="type">Cut</p>
-          <li>現在募集していません</li>
-          <% else %>
-          <p class="type">Cut</p>
-          <% hairdresser.cuts.each do |cut| %>
-            <li><%= cut.cut_type_id_i18n %></li>
-          <% end %>
-          <% end %>
-          </ul>
-          <ul class="clearfix">
-          <% if hairdresser.colors.count == 0 %>
-          <p class="type">Color</p>
-          <li>現在募集していません</li>
-          <% else %>
-          <p class="type">Color</p>
-          <% hairdresser.colors.each do |color| %>
-            <li><%= color.color_type_id_i18n %></li>
-          <% end %>
-          <% end %>
-          </ul>
-          <ul class="clearfix">
-          <% if hairdresser.perms.count == 0 %>
-          <p class="type">Perm</p>
-          <li>現在募集していません</li>
-          <% else %>
-          <p class="type">perm</p>
-          <% hairdresser.perms.each do |perm| %>
-            <li><%= perm.perm_type_id_i18n %></li>
-          <% end %>
-          <% end %>
-          </ul>
-          <ul class="clearfix">
-          <% if hairdresser.set_hairs.count == 0 %>
-          <p class="type">Set</p>
-          <li>現在募集していません</li>
-          <% else %>
-          <p class="type">Set</p>
-          <% hairdresser.set_hairs.each do |set| %>
-            <li><%= set.set_type_id_i18n %></li>
-          <% end %>
-          <% end %>
-          </ul>
-        </div>
-        </div>
-      </div>
-    </div>
-    <% end %>
-      <% end %>
+    <%= render partial: 'hairdressers/index', locals: {hairdressers: @hairdressers} %>
   </div>
 </div>
