--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <% elsif model_signed_in? %>
             <p class="home"><%= link_to "Hairmo Search", hairdressers_path %></p>
           <% else %>
-            <p class="home"><%= link_to "Hairmo-Search", root_path %></p>
+            <p class="home"><%= link_to "Hairmo-Search.", root_path %></p>
           <% end %>
           <ul>
             <% if hairdresser_signed_in? %>
