[fix]ヘアモ一覧修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -656,13 +656,13 @@ footer p {
 .model-search {
 	padding: 20px;
 	margin-bottom: 20px;
-	background-color: rgba(211, 204, 222, 0.1);
+	background-color: rgba(227, 208, 195, 0.3);
 	border-radius: 8px;
-	box-shadow: inset 0 0 15px 8px rgba(211, 204, 222, 0.8);
+	box-shadow: inset 0 0 15px 8px rgba(227, 208, 195, 1);
 	color: #220000;
 	p {
 		font-size: 18px;
-		color: rgb(200, 180, 210);
+		color: rgba(85, 49, 28, 0.8);
 		font-weight: bold;
 		margin-bottom: 15px;
 	}
@@ -681,7 +681,7 @@ footer p {
 	.search-btn {
 		text-align: right;
 		.btn {
-			background-color: rgb(200, 180, 210);
+			background-color: rgba(85, 49, 28, 0.5);
 			color: #FFFFFF;
 			font-weight: bold;
 			padding: 5px;
@@ -703,9 +703,9 @@ footer p {
 	.model-index-box {
 	width: 500px;
 	display: inline-block;
-	background-color: rgba(211, 204, 222, 0.3);
-	border: 3px solid rgb(211, 204, 222);
-	border-radius: 30px;
+	border: 1px solid rgba(227, 208, 195, 1);
+	border-radius: 8px;
+	box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2);
 	padding: 10px 20px;
 	margin: 15px 0;
 	color: #220000;
@@ -751,7 +751,7 @@ footer p {
 
 
 .model-index-box:hover {
-	box-shadow: 0 0 15px 8px rgba(211, 204, 222, 0.8);
+	box-shadow: 0 0 15px 8px rgba(227, 208, 195, 1);
 }
 
 // マイページ //
