--- a/app/views/hairdressers/_haircatalogs.html.erb
+++ b/app/views/hairdressers/_haircatalogs.html.erb
@@ -1,5 +1,5 @@
 <% @hairdresser.hair_catalogs.order(created_at: "DESC").each do |haircatalog| %>
-	<div class="col-md-3">
+	<div class="col-md-3 col-sm-4">
 		<div class="haircatalog">
 			<div class="haircatalog-header">
 				<% haircatalog.catalog_tags.each do |tag| %>
