--- a/app/views/hairdressers/edit.html.erb
+++ b/app/views/hairdressers/edit.html.erb
@@ -1,7 +1,7 @@
 <script src="https://ajaxzip3.github.io/ajaxzip3.js" charset="UTF-8"></script>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-offset-2 col-md-8">
+    <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
       <div class="shadow">
         <div class="sign-up-title">
           <h3>プロフィール編集</h3>
