--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,6 +1,6 @@
-<div class="container-fluid">
+<div class="container-fluid top-visual">
 	<div class="row">
-		<div class="link-box col-md-6">
+		<div class="link-box col-md-6 col-sm-6">
 			<div class="top">
 				<%= link_to models_path do %>
 				<div class="box">
@@ -10,7 +10,7 @@
 				<% end %>
 			</div>
 		</div>
-		<div class="link-box col-md-6">
+		<div class="link-box col-md-6 col-sm-6">
 			<div class="top">
 				<%= link_to hairdressers_path do %>
 				<div class="box">
