--- a/app/views/models/_favorites.html.erb
+++ b/app/views/models/_favorites.html.erb
@@ -1,5 +1,5 @@
 <% @model.favorites.each do |favorite| %>
-	<div class="col-md-3">
+	<div class="col-md-3 col-sm-4">
 		<div class="haircatalog">
 			<div class="haircatalog-header">
 				<% favorite.hair_catalog.catalog_tags.each do |tag| %>
