--- a/app/views/models/_index.html.erb
+++ b/app/views/models/_index.html.erb
@@ -41,7 +41,7 @@
       <% end %>
     </div>
   <% end %>
-  <div class="col-md-offset-5 col-md-4">
+  <div class="col-md-offset-5 col-md-4 col-sm-offset-5 col-sm-4">
     <%= paginate models %>
   </div>
 </div>
