--- a/app/views/hair_catalogs/show.html.erb
+++ b/app/views/hair_catalogs/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="back col-md-offset-1">
+		<div class="back col-md-offset-1 col-sm-offset-1">
 			<% if model_signed_in? %>
 				<%= link_to :back do %>
 					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"><strong>Back</strong></span>
@@ -13,7 +13,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-offset-2 col-md-8">
+		<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 			<div class="shadow">
 				<div class="catalog">
 				<div class="catalog-header">
