--- a/app/views/hairdressers/_messages.html.erb
+++ b/app/views/hairdressers/_messages.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-offset-4 col-md-4">
+<div class="col-md-offset-4 col-md-4 col-sm-offset-4 col-sm-5">
 	<div class="room-index">
 		<% @hairdresser.rooms.each do |room| %>
 			<%= link_to room_path(room.id) do %>
