--- a/app/views/hairdressers/index.html.erb
+++ b/app/views/hairdressers/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-offset-3 col-md-6">
+    <div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
       <div class="search">
         <%= form_with url: hairdressers_path, method: :get, local: true do |f| %>
           <p>美容師検索</p>
