--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-md-offset-3 col-md-6">
+		<div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
 			<div class="visual">
 				<div class="wrapper">
 					<div class="word">
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-offset-2 col-md-8">
+		<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 			<div class="about">
 				<h2>Hairmo Search とは...</h2>
 				<h3>美容師アシスタントとヘアモデルをつなぐマッチングサイトです</h3>
