--- a/app/views/models/index.html.erb
+++ b/app/views/models/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-offset-2 col-md-8">
+    <div class="col-md-offset-2 col-md-8 col-sm-12">
       <div class="model-search">
         <%= form_with url: models_path, method: :get, local: true do |f| %>
           <p>ヘアモ検索</p>
