--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,13 +1,13 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="back col-md-offset-2">
+		<div class="back col-md-offset-2 col-sm-offset-1">
 			<%= link_to :back do %>
 				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"><strong>Back</strong></span>
 			<% end %>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-offset-3 col-md-6">
+		<div class="col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6">
 			<% if @notifications.exists? %>
 				<% if hairdresser_signed_in? %>
 					<div class="notice">
