--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -181,12 +181,12 @@ header {
 	}
 }
 
-main {
-	margin: 100px 0 50px 0;
+.container-fluid {
+	margin-top: 60px;
 }
 
 .top-visual {
-	background-image: image-url("mainvisual.jpg");
+	background-image: image-url("mainvisual.png");
 	background-size: cover;
 	width: 100%;
 	height: 700px;
@@ -196,9 +196,6 @@ main {
 	margin: 150px 0;
 	text-align: center;
 	.top {
-	// padding: 40px;
-	// // background-color: rgba(227, 208, 195, 0.5);
-	// border-radius: 20px;
 	display: inline-block;
 		.box {
 			padding: 100px 50px;
@@ -223,7 +220,6 @@ main {
 }
 
 footer {
-	margin-top: 100px;
 	height: 50px;
 	background-color: rgba(227, 208, 195, 1);
 	text-align: center;
@@ -244,6 +240,7 @@ footer p {
 
 // 美容師新規登録・ログインページ //
 .shadow {
+	margin: 50px 0;
 	background-color: rgba(230, 230, 230, 0.2);
 	border-radius: 50px;
 	box-shadow: 5px 5px 15px 5px rgba(169, 169, 169, 0.3);
@@ -346,7 +343,7 @@ footer p {
 // 美容師一覧ページ //
 .search {
 	padding: 20px;
-	margin-bottom: 20px;
+	margin: 30px 0 20px 0;
 	background-color: rgba(227, 208, 195, 0.2);
 	border-radius: 8px;
 	box-shadow: inset 0 0 15px 8px rgba(227, 208, 195, 0.8);
@@ -573,6 +570,9 @@ footer p {
 }
 
 // ヘアカタログ一覧 //
+.haircata {
+	margin-bottom: 30px;
+}
 .haircatalog {
 	margin-top: 30px;
 	color: #220000;
@@ -665,7 +665,7 @@ footer p {
 // ヘアモ一覧ページ //
 .model-search {
 	padding: 20px;
-	margin-bottom: 20px;
+	margin: 30px 0 20px 0;
 	background-color: rgba(227, 208, 195, 0.2);
 	border-radius: 8px;
 	box-shadow: inset 0 0 15px 8px rgba(227, 208, 195, 0.8);
@@ -766,6 +766,10 @@ footer p {
 
 // マイページ //
 .profile {
+	margin: 30px 0 40px 0;
+}
+
+.mypage {
 	margin-bottom: 30px;
 }
 
@@ -887,6 +891,7 @@ footer p {
 // ルーム詳細ページ //
 .DM {
 	height: 500px;
+	margin-top: 30px;
 	margin-bottom: 150px;
 }
 
@@ -960,6 +965,9 @@ footer p {
 }
 
 // 通知一覧ページ //
+.notification {
+	margin: 30px 0 100px 0;
+}
 .notice {
 	text-align: center;
 	color: rgba(85, 49, 28, 0.9);
@@ -996,7 +1004,8 @@ footer p {
 
 // Aboutページ //
 .visual {
-	background-image: image-url("mainvisual.jpeg");
+	margin-top: 40px;
+	background-image: image-url("mainvisual.png");
 	background-size: cover;
 	text-align: center;
 	padding: 50px 70px;
