--- a/app/views/hairdressers/show.html.erb
+++ b/app/views/hairdressers/show.html.erb
@@ -108,7 +108,7 @@
 		</div>
 	</div>
 	<% if @hairdresser == current_hairdresser %>
-		<div class="row">
+		<div class="mypage row">
 			<div class="col-md-12">
 				<div class="tab-box">
 					<ul id="tab-menu" class="clearfix">
@@ -143,7 +143,7 @@
 			</div>
 		</div>
 	<% else %>
-		<div class="row">
+		<div class="haircata row">
 			<% @haircatalogs.each do |haircatalog| %>
 				<div class="col-md-3 col-sm-4">
 					<div class="haircatalog">
