--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -6,7 +6,7 @@
 			<% end %>
 		</div>
 	</div>
-	<div class="row">
+	<div class="notification row">
 		<div class="col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6">
 			<% if @notifications.exists? %>
 				<% if hairdresser_signed_in? %>
