--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -6,7 +6,7 @@
 			<% end %>
 		</div>
 	</div>
-	<div class="row DM">
+	<div class="DM row">
 		<div class="col-md-offset-3 col-md-6 col-sm-offset-1 col-sm-10">
 			<span id="message<%= @room.id %>">
 				<%= render partial: 'rooms/message', locals: {room: @room} %>
