--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -319,6 +319,7 @@ footer p {
 			color: #FFFFFF;
 			font-weight: bold;
 			font-size: 20px;
+			margin-bottom: 20px;
 		}
 	}
 }
@@ -462,7 +463,7 @@ footer p {
 			height: 50px;
 			background-color: rgba(227, 208, 195, 1);
 			border-radius: 20px;
-			margin-top: 15px;
+			margin: 15px 0 0 10px;
 			p {
 				color: #FFFFFF;
 				font-weight: bold;
@@ -574,7 +575,7 @@ footer p {
 	margin-bottom: 30px;
 }
 .haircatalog {
-	margin-top: 30px;
+	margin-top: 50px;
 	color: #220000;
 	.haircatalog-header {
 		width: 250px;
@@ -775,10 +776,11 @@ footer p {
 
 .tab-box {
 	margin-top: 20px;
+	margin-bottom: 200px;
 }
 
 #tab-menu {
-	margin: 0 200px 20px 200px;
+	margin: 0 200px 0 200px;
 }
 
 #tab-menu li {
@@ -845,7 +847,6 @@ footer p {
 
 .haircatalog-new {
 	position: fixed;
-	bottom: 80px;
 	right: 40px;
 	z-index: 1;
 	background-color: rgba(158, 151, 163, 0.6);
