[fix]マイページのレイアウト修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -575,7 +575,7 @@ footer p {
 	margin-bottom: 30px;
 }
 .haircatalog {
-	margin-top: 50px;
+	margin-bottom: 50px;
 	color: #220000;
 	.haircatalog-header {
 		width: 250px;
@@ -843,6 +843,10 @@ footer p {
 	  border-radius: 8px;
 	  color: #FFFFFF;
 	}
+}
+
+#tab-contents {
+	margin-top: 30px;
 }
 
 .haircatalog-new {
